--- a/package.json
+++ b/package.json
@@ -1,80 +1,50 @@
 {
-  "name": "my-v0-project",
-  "version": "0.1.0",
-  "private": true,
+  "name": "drill-tracker",
+  "version": "1.0.0",
+  "description": "A modern drill tracking application with Express.js backend and vanilla JavaScript frontend",
+  "main": "server.js",
+  
   "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start",
-    "server": "node src/server.js",
-    "server:dev": "nodemon src/server.js",
-    "start-backend": "node start-server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"No tests specified\" && exit 0",
+    "gcp:build": "echo \"Building for GCP deployment...\"",
+    "gcp:deploy": "echo \"Deploy to GCP Cloud Run\""
   },
+  
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-accordion": "1.2.2",
-    "@radix-ui/react-alert-dialog": "1.1.4",
-    "@radix-ui/react-aspect-ratio": "1.1.1",
-    "@radix-ui/react-avatar": "1.1.2",
-    "@radix-ui/react-checkbox": "1.1.3",
-    "@radix-ui/react-collapsible": "1.1.2",
-    "@radix-ui/react-context-menu": "2.2.4",
-    "@radix-ui/react-dialog": "1.1.4",
-    "@radix-ui/react-dropdown-menu": "2.1.4",
-    "@radix-ui/react-hover-card": "1.1.4",
-    "@radix-ui/react-label": "2.1.1",
-    "@radix-ui/react-menubar": "1.1.4",
-    "@radix-ui/react-navigation-menu": "1.2.3",
-    "@radix-ui/react-popover": "1.1.4",
-    "@radix-ui/react-progress": "1.1.1",
-    "@radix-ui/react-radio-group": "1.2.2",
-    "@radix-ui/react-scroll-area": "1.2.2",
-    "@radix-ui/react-select": "2.1.4",
-    "@radix-ui/react-separator": "1.1.1",
-    "@radix-ui/react-slider": "1.2.2",
-    "@radix-ui/react-slot": "1.1.1",
-    "@radix-ui/react-switch": "1.1.2",
-    "@radix-ui/react-tabs": "1.1.2",
-    "@radix-ui/react-toast": "1.2.4",
-    "@radix-ui/react-toggle": "1.1.1",
-    "@radix-ui/react-toggle-group": "1.1.1",
-    "@radix-ui/react-tooltip": "1.1.6",
-    "autoprefixer": "^10.4.20",
-    "bcryptjs": "latest",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "1.0.4",
-    "cors": "latest",
-    "date-fns": "4.1.0",
-    "dotenv": "latest",
-    "embla-carousel-react": "8.5.1",
-    "express": "latest",
-    "input-otp": "1.4.1",
-    "jsonwebtoken": "latest",
-    "lucide-react": "^0.454.0",
-    "mongoose": "latest",
-    "next": "15.2.4",
-    "next-themes": "^0.4.4",
-    "path": "latest",
-    "react": "^19",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^19",
-    "react-hook-form": "^7.54.1",
-    "react-resizable-panels": "^2.1.7",
-    "recharts": "2.15.0",
-    "sonner": "^1.7.1",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5", 
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3"
   },
+  
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8.5",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "nodemon": "^2.0.22"
+  },
+  
+  "keywords": [
+    "drill", 
+    "tracker", 
+    "mongodb", 
+    "express", 
+    "nodejs",
+    "gcp",
+    "cloud-run"
+  ],
+  
+  "author": "Drill Tracker Team",
+  "license": "ISC",
+  
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
+  
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-org/drill-tracker.git"
   }
 }
